--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,19 @@
 {
 	"root": true,
-	"extends": [
-		"niksy"
+	"extends": ["niksy", "niksy/next", "niksy/browser", "prettier"],
+	"plugins": ["prettier"],
+	"rules": {
+		"prettier/prettier": 1
+	},
+	"overrides": [
+		{
+			"files": ["test/manual/webpack.config.js"],
+			"env": {
+				"node": true
+			},
+			"rules": {
+				"no-console": 0
+			}
+		}
 	]
 }
