--- a/package.json
+++ b/package.json
@@ -2,43 +2,94 @@
   "name": "blazer-utils",
   "version": "1.0.0",
   "description": "Style utilities.",
-  "main": "_index.scss",
-  "author": "Ivan Nikolić <niksy5@gmail.com> (http://ivannikolic.com)",
   "license": "MIT",
+  "author": "Ivan Nikolić <niksy5@gmail.com> (http://ivannikolic.com)",
+  "sideEffects": false,
+  "exports": {
+    ".": {
+      "sass": "_index.scss",
+      "style": "_index.scss",
+      "default": "_index.scss"
+    },
+    "./index": {
+      "sass": "_index.scss",
+      "style": "_index.scss",
+      "default": "_index.scss"
+    },
+    "./mixins": {
+      "sass": "_mixins.scss",
+      "style": "_mixins.scss",
+      "default": "_mixins.scss"
+    },
+    "./package.json": "./package.json"
+  },
+  "main": "_index.scss",
   "style": "_index.scss",
   "directories": {
     "test": "test"
   },
+  "files": [
+    "_index.scss",
+    "_mixins.scss",
+    "lib/",
+    "CHANGELOG.md",
+    "LICENSE.md",
+    "README.md"
+  ],
   "scripts": {
-    "test": "eslint '{test/**/*}.js' && stylelint '{_index,_mixins,test/**/*}.scss' && mocha test/*.js",
-    "test:manual:local": "gulp test:local:manual --watch"
+    "lint": "eslint '{index,lib/**/*,test/**/*}.js' && stylelint '{_index,_mixins,test/**/*}.scss'",
+    "postpublish": "GITHUB_TOKEN=$GITHUB_RELEASE_TOKEN github-release-from-changelog",
+    "release": "np --no-release-draft",
+    "test": "npm run lint && mocha --require esm test/*.js",
+    "test:generate-static-site": "webpack --config ./test/manual/webpack.config.js",
+    "test:generate-static-site:watch": "webpack-dev-server --config ./test/manual/webpack.config.js",
+    "test:manual": "npm run test:generate-static-site:watch",
+    "version": "version-changelog CHANGELOG.md && changelog-verify CHANGELOG.md && git add CHANGELOG.md"
   },
   "devDependencies": {
-    "@niksy/babayaga": "^0.1.1",
-    "del": "^2.2.0",
-    "eslint": "^3.1.1",
-    "eslint-config-niksy": "^3.0.1",
-    "globby": "^4.1.0",
-    "gulp": "^3.9.1",
-    "gulp-debug": "^2.1.2",
-    "gulp-nunjucks-render": "^2.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^6.2.0",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-util": "^3.0.7",
-    "local-web-server": "^1.2.4",
-    "minimist": "^1.2.0",
-    "mocha": "^3.1.2",
-    "opn": "^4.0.2",
-    "postcss-import": "^9.0.0",
-    "sass-true": "^2.1.3",
-    "stylelint": "^7.0.3",
-    "stylelint-config-niksy": "^3.0.1",
-    "suitcss-components-test": "^1.0.0"
+    "changelog-verify": "^1.1.2",
+    "css-loader": "^5.0.0",
+    "del": "^6.0.0",
+    "eslint": "^7.11.0",
+    "eslint-config-niksy": "^9.0.0",
+    "eslint-config-prettier": "^6.14.0",
+    "eslint-plugin-extend": "^0.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^30.7.3",
+    "eslint-plugin-mocha": "^8.0.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-unicorn": "^23.0.0",
+    "esm": "^3.0.51",
+    "fibers": "^5.0.0",
+    "github-release-from-changelog": "^2.1.1",
+    "globby": "^11.0.1",
+    "html-webpack-plugin": "^4.5.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.2",
+    "mini-css-extract-plugin": "^1.2.0",
+    "mocha": "^8.2.0",
+    "np": "^6.5.0",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^4.0.4",
+    "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.1.2",
+    "sass": "^1.32.4",
+    "sass-loader": "^10.1.1",
+    "sass-true": "^6.0.1",
+    "stylelint": "^13.7.2",
+    "stylelint-config-niksy": "^8.0.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-prettier": "^1.1.2",
+    "suitcss-components-test": "^1.0.0",
+    "version-changelog": "^3.1.1",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "engines": {
-    "node": ">=4"
+    "node": ">=10"
   },
   "keywords": [
     "blazer",
