--- a/package.json
+++ b/package.json
@@ -75,9 +75,9 @@
     "postcss-loader": "^4.0.4",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.1.2",
-    "sass": "^1.32.4",
+    "sass": "1.32.4",
     "sass-loader": "^10.1.1",
-    "sass-true": "^6.0.1",
+    "sass-true": "6.0.1",
     "stylelint": "^13.7.2",
     "stylelint-config-niksy": "^8.0.0",
     "stylelint-config-prettier": "^8.0.2",
